# goit_python_web_hw_14

./: .gitignore  Dockerfile  README-DEPL.md  README.md  docker-compose-db.yml  docker-compose.yml  pyproject.toml  requirements.txt  run.sh  test.db
doc/dot-env-example/: README.md  env  env-dev  env-prod
hw14/: main.py
hw14/docs/: conf.py  index.rst
hw14/docs/_build/doctrees/: environment.pickle  index.doctree
hw14/docs/_build/html/: genindex.html  index.html  objects.inv  py-modindex.html  search.html  searchindex.js
hw14/migrations/: env.py
hw14/migrations/versions/: 137809b176a8_init.py  7ed8b8fdfdb3_user_owner.py  b5c1d2898113_confirmed.py
hw14/src/conf/: config.py
hw14/src/database/: db.py  models.py
hw14/src/repository/: auth.py  contacts.py  users.py
hw14/src/routes/: auth.py  contacts.py  users.py
hw14/src/services/: cloudinary.py  emails.py  roles.py  srv_cloudinary.py
hw14/src/services/auth/: auth.py  auth_token.py
hw14/src/services/templates/: confirm_email.html
hw14/src/shemas/: auth.py  contact.py  users.py
hw14/src/utils/: seed.py
hw14/static/client/: index.html  main.html
hw14/static/client/js/: app.js  main.js
hw14/templates/: index.html
scripts/: docker_build_docker-compose.cmd  docker_run_db.cmd  docker_run_db_compose.cmd  docker_run_docker-compose.cmd  runserver.cmd  sql_alebic_init.cmd  sql_upgrade.cmd
tests/: _test_pytest_examples.py  conftest.py  test.db  test_pytest_route_contact.py  test_pytest_route_contacts.py  test_pytest_route_users.py  test_unit_repository_contacts.py
(+1 files in other folders)
